[gd_scene load_steps=3 format=3 uid="uid://cxeng48cqpdou"]

[ext_resource type="Script" uid="uid://c68b1q5jtq2qs" path="res://SCENES/UI/INVENTORY/inventory.gd" id="1_b5i74"]
[ext_resource type="Texture2D" uid="uid://b4nw7ov3cebgb" path="res://ASSET/Ball/ball_lightblue.png" id="2_wriiy"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5i74")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -602.5
offset_top = -350.0
offset_right = 602.5
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="InvenBackground" type="GridContainer" parent="Background"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -510.0
offset_top = -400.0
offset_right = 510.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 9

[node name="ColorRect" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect5" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect6" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect7" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect8" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect9" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect10" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect17" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect18" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect19" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect20" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect21" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect22" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect23" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect24" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect25" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect26" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect11" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect12" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect13" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect14" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect15" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect16" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect27" type="ColorRect" parent="Background/InvenBackground"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ItemLayer" type="GridContainer" parent="Background"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -510.0
offset_top = -400.0
offset_right = 510.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 9

[node name="Ball1" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 70.0
offset_right = 20.0
offset_bottom = 110.0
grow_horizontal = 2

[node name="Ball1Icon" type="TextureRect" parent="Background/Ball1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = -400.0
offset_bottom = 100.0
grow_horizontal = 2
texture = ExtResource("2_wriiy")

[node name="Ball1Traits" type="GridContainer" parent="Background/Ball1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_right = 350.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/h_separation = 50
columns = 5

[node name="ColorRect" type="ColorRect" parent="Background/Ball1/Ball1Traits"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="Background/Ball1/Ball1Traits"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="Background/Ball1/Ball1Traits"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="Background/Ball1/Ball1Traits"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ColorRect5" type="ColorRect" parent="Background/Ball1/Ball1Traits"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
